syntax = "proto3"; //声明了protobuf的版本

//定义下面的选项，表示生成service服务类和rpc方法描述，默认不生成
option cc_generic_services = true;


package fixbug; //声明了代码所在的包，对于c++来说时namespace

message ResultCode
{
    int32 errcode = 1;
    int32 errmsg = 2;
}
// 数据 列表 映射表
// 定义登录消息类型 name pwd
message LoginRequest
{
    bytes name = 1;
    bytes pwd = 2;
}

//定义登录响应消息类型
message LoginResponse
{
    ResultCode result = 1;
    bool success = 2;
    map<int32, string> test = 3;
}


message User
{
    bytes name = 1;
    uint32 age = 2;
    enum Sex
    {
        MAN = 0;
        WOMAN = 1;
    }
    Sex sex = 3;
}

message GetFriendListRequest
{
    uint32 userid = 1;
}


message GetFriendListResponse
{
    ResultCode result = 1;
    repeated User friend_list = 2;//定义了一个列表类型
}

//在protobuf里面怎么定义描述rpc方法的类型 -service
service UserServiceRpc
{
    rpc Log(LoginRequest) returns (LoginResponse);
    rpc GetFriendList(GetFriendListRequest) returns (GetFriendListResponse);
}